--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ p{
     color: midnightblue;
 }
 .box2{
-    background-color:darkkhaki;
+    background-color:darkgoldenrod;
     width: 50px;
     height: 50px;
     text-align: center;
