--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background: black;
+    background: rgb(19, 46, 54);
     color: aqua;
     text-align: justify;
     margin-left: 10% ;
@@ -52,4 +52,35 @@ footer{
     color: black;
     text-align: center;
     
+}
+
+.llavesContenedor{
+    color: black;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    text-align: center;
+    background-color: lightskyblue;
+
+}
+.llaveImg{
+    width: 300px;
+    flex-grow: 1;
+    flex-basis: 300px;
+    margin: 20px;
+}
+.flex-item{
+    flex-grow: 1;
+    margin: 20px;
+    max-width: 300px;
+    border: 3px solid #333;
+    padding: 0 20px;
+}
+.flex-item:hover{
+    border-color: blueviolet;
+    box-shadow: 0px 0px 30px #317121;
+}
+.flex-item:focus{
+    border-color: blueviolet;
+    box-shadow: 0px 0px 30px #317121;
 }
